<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/item_unlock_fps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:minHeight="?listPreferredItemHeightSmall"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/activity_padding"
                    android:paddingEnd="@dimen/activity_padding">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/unlock_fps_limit"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                    <com.google.android.material.materialswitch.MaterialSwitch
                        android:id="@+id/switch_unlock_fps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_padding"
                    android:text="@string/display_mode_message"
                    android:textAppearance="@style/TextAppearance.Material3.BodySmall" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:dividerInsetEnd="@dimen/activity_padding"
                    app:dividerInsetStart="@dimen/activity_padding" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/activity_padding"
                    android:paddingEnd="@dimen/activity_padding">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_current_display_mode"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="Current Display mode: 1644x3840 60HZ" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/refresh_display_mode"
                        style="@style/Widget.Material3.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/refresh" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:dividerInsetEnd="@dimen/activity_padding"
                    app:dividerInsetStart="@dimen/activity_padding" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/enable_4k"
                        style="@style/Widget.Material3.Button.ElevatedButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_padding"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:text="@string/enable_4k" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/restore_display_mode"
                        style="@style/Widget.Material3.Button.ElevatedButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="@dimen/activity_padding"
                        android:layout_weight="1"
                        android:text="@string/restore_default" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/set_wm_size"
                        style="@style/Widget.Material3.Button.ElevatedButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_padding"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:text="@string/set_wm_size" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/set_wm_density"
                        style="@style/Widget.Material3.Button.ElevatedButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="@dimen/activity_padding"
                        android:layout_weight="1"
                        android:text="@string/set_wm_density" />

                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </com.google.android.material.card.MaterialCardView>

    </androidx.core.widget.NestedScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>